--- a/index.html
+++ b/index.html
@@ -15,14 +15,9 @@
         <a class="navbar-brand" href="index-starter.html">
         <img src="jon-smith-title.ps" width="225" height="75" alt="logo for Jon Smith Designs">
         <span class="d-none">Jon Smith Designs</span> </a>
-        <button
-class="navbar-toggler" type="button" 
-data-bs-toggle="collapse" 
-data-bs-target="#navbarNav" 
-aria-controls="navbarNav" 
-aria-expanded="false" 
-aria-label="Toggle Navigation"
-
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
+            <i class="bi bi-list"></i>
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
