--- a/portfolio.html
+++ b/portfolio.html
@@ -4,25 +4,22 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Bootstrap CSS -->
-<link href="hGps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384- +0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-<link href="custom.css" rel="stylesheet" >
-<title>Portfolio | Jon Smith Designs</title> </head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"&gt;<link href="custom.css" rel="stylesheet" >
+<title> Portfolio | Sophia Dela Cruz</title> 
+</head>
 <body>
-  <div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light">
-  <div class="container">
-  <a class="navbar-brand" href="index-starter.html">
-  <img src="jon-smith-title.ps" width="225" height="75" alt="logo for Jon Smith Designs">
-  <span class="d-none">Jon Smith Designs</span> </a>
-<button
-class="navbar-toggler" type="button" 
-data-bs-toggle="collapse" 
-data-bs-target="#navbarNav" 
-aria-controls="navbarNav" 
-aria-expanded="false" 
-aria-label="Toggle Navigation"
-
-<span class="navbar-toggler-icon"></span>
+  <header class="navvy">
+    <div class="container px-8">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand" href="index-starter.html">
+            <img src="jon-smith-title.ps" width="225" height="75" alt="logo for Sophia">
+  <span class="d-none">Sophia Dela Cruz</span> 
+  </a>
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
+  <i class="bi bi-list"></i>
+//<span class="navbar-toggler-icon"></span>//
 </button>
 <div class="collapse navbar-collapse" id="navbarNav">
   <ul class="navbar-nav ms-auto text-center"> 
@@ -36,9 +33,10 @@ aria-label="Toggle Navigation"
       <a href="contact.html" class="nav-link">Contact</a> 
     </li>
   </ul>
-</div>
-</nav> 
+    </div>
+  </nav> 
 </div> 
+</header>
 <main>
     <div class="container my-2 py-md-4">
         <h1>My Portfolio</h1>
