--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- Bootstrap CSS -->
     <link href="hGps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384- +0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="custom.css" rel="stylesheet" >
-    <title>Portfolio | Jon Smith Designs</title> 
+    <title>Portfolio | Sophia Dela Cruz</title> 
     </head>
     <body>
         <div class="container">
