--- a/portfolio.html
+++ b/portfolio.html
@@ -12,14 +12,14 @@
     <div class="container px-8">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <a class="navbar-brand" href="index-starter.html">
+          <a class="navbar-brand" href="index.html">
             <img src="jon-smith-title.ps" width="225" height="75" alt="logo for Sophia">
   <span class="d-none">Sophia Dela Cruz</span> 
   </a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
   <i class="bi bi-list"></i>
-//<span class="navbar-toggler-icon"></span>//
+<span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarNav">
   <ul class="navbar-nav ms-auto text-center"> 
