--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img src="jon-smith-title.ps" width="225" height="75" alt="logo for Sophia">
-  <span class="d-none">Sophia Dela Cruz</span> 
-  </a>
+    <span class="d-none">Sophia Dela Cruz</span> 
+          </a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
   <i class="bi bi-list"></i>
@@ -43,32 +43,31 @@ aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
         <div class="row et-1 g-3">
             <div class="col-12 col-and-6 col-lg-4">
         <div class="card">
-            <img src="dining-room-smaller.jpeg" alt="Dining Room" class="card-img-top">
+            <img src="kdj.png" alt="Fav Character Website" class="card-img-top">
             <div class="card-body">
-                <h5 class="card-title">Dining Room</h5>
+                <h5 class="card-title">Kim Dokja</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi volutpat lacus nulla, vel mattis leo malesuada et. Donec a ipsum</p>
-                <a href="#" class="btn btn-outline-dark">Learn More!</a>
+                <a href="https://sopeya.github.io/WS02-MID1/" class="btn btn-outline-dark">Learn More!</a>
            </div>
         </div> 
     </div>
     <div class="col-12 col-and-6 col-lg-4">
         <div class="card">
-            <img src="office-smaller.jpeg" alt="Office" class="card-img-top">
+            <img src="analog.png" alt="Piano Keyboards" class="card-img-top">
             <div class="card-body">
-                <h5 class="card-title">
-                     Office</h5>
+                <h5 class="card-title">Piano Keyboards</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi volutpat lacus nulla, vel mattis leo malesuada et. Donec a ipsum</p>
-                <a href="#" class="btn btn-outline-dark">Learn More!</a>
+                <a href=" https://sopeya.github.io/Analog/" class="btn btn-outline-dark">Learn More!</a>
            </div>
         </div> 
     </div>
     <div class="col-12 col-and-6 col-lg-4">
         <div class="card">
-            <img src="sitting-area-smaller.jpeg" alt="Sitting Area" class="card-img-top">
+            <img src="poetry.png" alt="Poetry Workshop" class="card-img-top">
             <div class="card-body">
-                <h5 class="card-title">Sitting Area</h5>
+                <h5 class="card-title">Poetry Workshop</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi volutpat lacus nulla, vel mattis leo malesuada et. Donec a ipsum</p>
-                <a href="#" class="btn btn-outline-dark">Learn More!</a>
+                <a href="https://sopeya.github.io/Poetry/" class="btn btn-outline-dark">Learn More!</a>
            </div>
         </div> 
     </div>
