--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
             <a class="navbar-brand" href="index.html"></a>
-                <img src="logo-title.png" width="225" height="75" alt="logo for Jenny Rose Websites">
-                <span class="d-none">Jenny Rose Websites</span>
+                <img src="logo-title.png" width="225" height="75" alt="logo for Sophia">
+                <span class="d-none">Sophia's Websites</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
