--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -15,7 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
             <a class="navbar-brand" href="index.html"></a>
-                <img src="logo-title.png" width="225" height="75" alt="logo for Sophia">
+                <img src="logo.PNG" width="225" height="75" alt="logo for Sophia">
                 <span class="d-none">Sophia's Websites</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -42,7 +41,7 @@
             <div class="container overflow-hidden">
             <h1>About Sophia</h1>
             <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium eaque dignissimos ab esse quo qui aspernatur nulla ex. Quae temporibus assumenda aliquid quaerat distinctio perferendis doloremque? Sed, porro laudantium!</p>
-            <p class="text-center"><img src="john-smith-portrait.jpg" alt="" class="float-sm-none float-md-end" height="300" width="300"> </p>
+            <p class="text-center"><img src="profile.PNG" alt="" class="float-sm-none float-md-end" height="300" width="300"> </p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro animi laboriosam tempora totam blanditiis eaque laudantium adipisci assumenda dicta officia. Nobis soluta inventore reprehenderit facere veniam? Quaerat fuga at autem?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit porro at quibusdam aliquam voluptatibus, ad dignissimos deleniti sapiente praesentium alias, impedit explicabo incidunt nihil mollitia voluptas quas. Doloremque cum minima nulla quia recusandae atque dignissimos nesciunt nobis, magni, eos suscipit.</p>
             </div>
