--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img src="logo.PNG" width="225" height="75" alt="logo for Sophia">
-    <span class="d-none">Sophia Dela Cruz</span> 
+    <span class="d-none">Sophia</span> 
           </a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
@@ -43,30 +43,31 @@ aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
         <div class="row et-1 g-3">
             <div class="col-12 col-and-6 col-lg-4">
         <div class="card">
-            <img src="kdj.png" alt="Fav Character Website" class="card-img-top">
+            <img src="comrades.JPG" alt="Kim Dokja and his companions" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Kim Dokja</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi volutpat lacus nulla, vel mattis leo malesuada et. Donec a ipsum</p>
+                <p class="card-text">Kim Dokja is the main protagonist of Omniscient Reader's Viewpoint. He is the sole reader of the webnovel Three Ways to Survive in a Ruined World, an apocalyptic fantasy story written by tls123 who read it through the end.</p>
                 <a href="https://sopeya.github.io/WS02-MID1/" class="btn btn-outline-dark">Learn More!</a>
+              <p></p>
            </div>
         </div> 
     </div>
     <div class="col-12 col-and-6 col-lg-4">
         <div class="card">
-            <img src="analog.png" alt="Piano Keyboards" class="card-img-top">
+            <img src="saeed-khokhar.jpg" alt="Piano" class="card-img-top">
             <div class="card-body">
-                <h5 class="card-title">Piano Keyboards</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi volutpat lacus nulla, vel mattis leo malesuada et. Donec a ipsum</p>
+                <h5 class="card-title">Piano</h5>
+                <p class="card-text">Piano, a keyboard musical instrument having wire strings that sound when struck by felt-covered hammers operated from a keyboard. The standard modern piano contains 88 keys and has a compass of seven full octaves plus a few keys.</p>
                 <a href=" https://sopeya.github.io/Analog/" class="btn btn-outline-dark">Learn More!</a>
            </div>
         </div> 
     </div>
     <div class="col-12 col-and-6 col-lg-4">
         <div class="card">
-            <img src="poetry.png" alt="Poetry Workshop" class="card-img-top">
+            <img src="suzy-hazelwood.jpg" alt="Poetry" class="card-img-top">
             <div class="card-body">
-                <h5 class="card-title">Poetry Workshop</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi volutpat lacus nulla, vel mattis leo malesuada et. Donec a ipsum</p>
+                <h5 class="card-title">Poetry</h5>
+                <p class="card-text"> Poetry is a type of literature that conveys a thought, describes a scene or tells a story in a concentrated, lyrical arrangement of words. </p>
                 <a href="https://sopeya.github.io/Poetry/" class="btn btn-outline-dark">Learn More!</a>
            </div>
         </div> 
