--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <a class="navbar-brand" href="index-starter.html">
-                        <img src="jon-smith-title.ps" width="225" height="75" alt="logo for Jon Smith Designs">
+                        <img src="logo.PNG" width="225" height="75" alt="logo for Sophia">
         <span class="d-none">Jon Smith Designs</span> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
