--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="jon-smith-title.png" width="225" height="75" alt="logo for Jon
-                Smith Designs">
+                <img src="logo.PNG" width="225" height="75" alt="logo for Sophia">
                 <span class="d-none">Sophia Dela Cruz</span>
  </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
