--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,12 @@
-<!doctype html> <html lang="en">
+<!doctype html> 
+<html lang="en">
+  
 <head>
-<!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"&gt;<link href="custom.css" rel="stylesheet" >
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="custom.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"&gt;<link href="custom.css" rel="stylesheet" >
 <title> Portfolio | Sophia Dela Cruz</title> 
 </head>
 <body>
@@ -13,29 +15,28 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
           <a class="navbar-brand" href="index.html">
-            <img src="logo.PNG" width="225" height="75" alt="logo for Sophia">
-    <span class="d-none">Sophia</span> 
+            <img src="logo.PNG" width="220" height="85" alt="logo for Sophia">
+            <span class="d-none">Sophia</span> 
           </a>
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
-  <i class="bi bi-list"></i>
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNav">
-  <ul class="navbar-nav ms-auto text-center"> 
-    <li class="nav-item"> 
-      <a href="about.html" class="nav-link">About</a> 
-    </li>
-    <li class="nav-item">
-      <a href="portfolio.html" class="nav-link">Portfolio</a>
-    </li>
-    <li class="nav-item">
-      <a href="contact.html" class="nav-link">Contact</a> 
-    </li>
-  </ul>
-    </div>
-  </nav> 
-</div> 
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
+            <i class="bi bi-list"></i>
+          <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto text-center"> 
+              <li class="nav-item"> 
+                <a href="about.html" class="nav-link">About</a> 
+              </li>
+              <li class="nav-item">
+                <a href="portfolio.html" class="nav-link">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a href="contact.html" class="nav-link">Contact</a> 
+              </li>
+            </ul>
+        </div>
+      </nav> 
+    </div> 
 </header>
 <main>
     <div class="container my-2 py-md-4">
