--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!doctype html> <html lang="en">
+<!doctype html> 
+<html lang="en">
+    
 <head>
-<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Bootstrap CSS -->
@@ -14,17 +15,15 @@
                 <div class="container">
                     <a class="navbar-brand" href="index-starter.html">
                         <img src="logo.PNG" width="225" height="75" alt="logo for Sophia">
-        <span class="d-none">Jon Smith Designs</span> </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
-            <i class="bi bi-list"></i>
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+                        <span class="d-none">Sophia</span> </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
+                        <i class="bi bi-list"></i>
+                        <span class="navbar-toggler-icon"></span>
+                        </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
                <ul class="navbar-nav ms-auto text-center">
                    <li class="nav-item">
-                    <a href="about.html" class="nav-link">About</a> </li>
-
+                        <a href="about.html" class="nav-link">About</a> </li>
                     <li class="nav-item">
                         <a href="index.html" class="nav-link">Portfolio</a>
                     </li>
@@ -32,9 +31,9 @@ aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
                         <a href="contact.html" class="nav-link">Contact</a> 
                     </li>
                 </ul>
-        </div>
-    </nav> 
-</div> 
+            </div>
+        </nav> 
+    </div> 
 <main>
   <header style="background-image: url('index-image.jpeg')">
     <div class="color-overlay d-flex justify-content-center align-items-center">
@@ -56,7 +55,7 @@ aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
       </div>
     </div>
 </main>
- <footer class="py 5"
+ <footer class="py-5"
   <div class="d-flex flex-row justify-content-center">
       <a href="https://www.facebook.com/profile.php?id=100009065549304" class="me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16"> <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/> </svg>
