--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Bootstrap CSS -->
-    <link href="hGps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384- +0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384- +0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="custom.css" rel="stylesheet" >
     <title>Portfolio | Sophia Dela Cruz</title> 
     </head>
@@ -14,7 +14,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <a class="navbar-brand" href="index-starter.html">
-                        <img src="logo.PNG" width="225" height="75" alt="logo for Sophia">
+                        <img src="logo.PNG" width="220" height="85" alt="logo for Sophia">
                         <span class="d-none">Sophia</span> </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
                         <i class="bi bi-list"></i>
@@ -43,16 +43,10 @@
      <div class="singleCol mx-auto my5">
          <div class="container">
              <h2 class="text-center">I'll make your room look amazing</h2>
-      <p class="lead">
-         lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid
-      </p>
-      <p>
-         lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid
-      </p>
-      <p>
-      lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid
-      </p>
-      </div>
+              <p class="lead">lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid</p>
+              <p>lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid</p>
+              <p>lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid</p>
+        </div>
     </div>
 </main>
  <footer class="py-5"
