--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
             <img src="saeed-khokhar.jpg" alt="Piano" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Piano</h5>
-                <p class="card-text">Piano, a keyboard musical instrument having wire strings that sound when struck by felt-covered hammers operated from a keyboard. The standard modern piano contains 88 keys and has a compass of seven full octaves plus a few keys.</p>
+                <p class="card-text">Piano, a keyboard musical instrument having wire strings that sound when struck by felt-covered hammers operated from a keyboard.</p>
                 <a href=" https://sopeya.github.io/Analog/" class="btn btn-outline-dark">Learn More!</a>
            </div>
         </div> 
@@ -86,7 +86,7 @@
     
 <!-- Op@onal JavaScript; choose one of the two! -->
 <!-- Op@on 1: Bootstrap Bundle with Popper -->
-<script src="hGps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 <!-- Op@on 2: Separate Popper and Bootstrap JS -->
       <!--
 <script src="hGps://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
