--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
     <main>
         <div class="singleCol mx-auto my-2 my-md-4">
             <div class="container overflow-hidden">
-            <h1>About Sophia</h1>
-            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium eaque dignissimos ab esse quo qui aspernatur nulla ex. Quae temporibus assumenda aliquid quaerat distinctio perferendis doloremque? Sed, porro laudantium!</p>
+            <h1>About Me</h1>
+            <p class="lead">A college student who still doesn't know her true purpose in life.</p>
             <p class="text-center"><img src="profile.PNG" alt="" class="float-sm-none float-md-end" height="270" width="260"> </p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro animi laboriosam tempora totam blanditiis eaque laudantium adipisci assumenda dicta officia. Nobis soluta inventore reprehenderit facere veniam? Quaerat fuga at autem?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit porro at quibusdam aliquam voluptatibus, ad dignissimos deleniti sapiente praesentium alias, impedit explicabo incidunt nihil mollitia voluptas quas. Doloremque cum minima nulla quia recusandae atque dignissimos nesciunt nobis, magni, eos suscipit.</p>
@@ -61,7 +61,7 @@
     
 <!-- Op@onal JavaScript; choose one of the two! -->
 <!-- Op@on 1: Bootstrap Bundle with Popper -->
-<script src="hGps://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 <!-- Op@on 2: Separate Popper and Bootstrap JS -->
       <!--
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
