--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <div class="singleCol mx-auto my-2 my-md-4">
             <div class="container overflow-hidden">
             <h1>About Me</h1>
-            <p class="lead">A college student who still doesn't know her true purpose in life.</p>
+            <p class="lead">A college student who still doesn't know her purpose in life.</p>
             <p class="text-center"><img src="profile.PNG" alt="" class="float-sm-none float-md-end" height="270" width="260"> </p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro animi laboriosam tempora totam blanditiis eaque laudantium adipisci assumenda dicta officia. Nobis soluta inventore reprehenderit facere veniam? Quaerat fuga at autem?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit porro at quibusdam aliquam voluptatibus, ad dignissimos deleniti sapiente praesentium alias, impedit explicabo incidunt nihil mollitia voluptas quas. Doloremque cum minima nulla quia recusandae atque dignissimos nesciunt nobis, magni, eos suscipit.</p>
