--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <span class="d-none">Sophia</span> 
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
-            <i class="bi bi-list"></i>
+            //<i class="bi bi-list"></i>//
           <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
