--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                                 <textarea name="comments" class="form-control" id="comments" rows="3"></textarea>
                             </div>
                             <div class="col-12 mb-1">
-                                <button type="submit" class="btn btn-primary">Submit</button>
+                                <button type="submit" class="btn btn-#4E3622">Submit</button>
                             </div>
                         </div>
                     </form>
