--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
             <img src="comrades.JPG" alt="Kim Dokja and his companions" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Kim Dokja</h5>
-                <p class="card-text">Kim Dokja is the main protagonist of Omniscient Reader's Viewpoint. He is the sole reader of the webnovel Three Ways to Survive in a Ruined World, an apocalyptic fantasy story written by tls123 who read it through the end.</p>
+                <p class="card-text">The main protagonist of Omniscient Reader's Viewpoint. He is the sole reader of the webnovel Three Ways to Survive in a Ruined World, an apocalyptic fantasy story written by tls123 who read it through the end.</p>
                 <a href="https://sopeya.github.io/WS02-MID1/" class="btn btn-outline-dark">Learn More!</a>
               <p></p>
            </div>
@@ -57,7 +57,7 @@
             <img src="saeed-khokhar.jpg" alt="Piano" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Piano</h5>
-                <p class="card-text">Piano, a keyboard musical instrument having wire strings that sound when struck by felt-covered hammers operated from a keyboard.</p>
+                <p class="card-text">A keyboard musical instrument having wire strings that sound when struck by felt-covered hammers operated from a keyboard.</p>
                 <a href=" https://sopeya.github.io/Analog/" class="btn btn-outline-dark">Learn More!</a>
            </div>
         </div> 
@@ -67,7 +67,7 @@
             <img src="suzy-hazelwood.jpg" alt="Poetry" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Poetry</h5>
-                <p class="card-text"> Poetry is a type of literature that conveys a thought, describes a scene or tells a story in a concentrated, lyrical arrangement of words. </p>
+                <p class="card-text"> A type of literature that conveys a thought, describes a scene or tells a story in a concentrated, lyrical arrangement of words. </p>
                 <a href="https://sopeya.github.io/Poetry/" class="btn btn-outline-dark">Learn More!</a>
            </div>
         </div> 
