--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
         <div class="row et-1 g-3">
             <div class="col-12 col-and-6 col-lg-4">
         <div class="card">
-            <img src="comrades.JPG" alt="Kim Dokja and his companions" class="card-img-top">
+            <img src="comrades.jpeg" alt="Kim Dokja and his companions" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Kim Dokja</h5>
                 <p class="card-text">The main protagonist of Omniscient Reader's Viewpoint. He is the sole reader of the webnovel Three Ways to Survive in a Ruined World, an apocalyptic fantasy story written by tls123 who read it through the end.</p>
@@ -54,7 +54,7 @@
     </div>
     <div class="col-12 col-and-6 col-lg-4">
         <div class="card">
-            <img src="saeed-khokhar.jpg" alt="Piano" class="card-img-top">
+            <img src="saeed-khokhar.jpeg" alt="Piano" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Piano</h5>
                 <p class="card-text">A keyboard musical instrument having wire strings that sound when struck by felt-covered hammers operated from a keyboard.</p>
@@ -64,7 +64,7 @@
     </div>
     <div class="col-12 col-and-6 col-lg-4">
         <div class="card">
-            <img src="suzy-hazelwood.jpg" alt="Poetry" class="card-img-top">
+            <img src="suzy-hazelwood.jpeg" alt="Poetry" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Poetry</h5>
                 <p class="card-text"> A type of literature that conveys a thought, describes a scene or tells a story in a concentrated, lyrical arrangement of words. </p>
