--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
             <img src="comrades.jpeg" alt="Kim Dokja and his companions" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Kim Dokja</h5>
-                <p class="card-text">The main protagonist of Omniscient Reader's Viewpoint. He is the sole reader of the webnovel Three Ways to Survive in a Ruined World, an apocalyptic fantasy story written by tls123 who read it through the end.</p>
+                <p class="card-text">The main protagonist of ORV. The sole reader of the webnovel Three Ways to Survive in a Ruined World, an apocalyptic fantasy story written by tls123 who read it through the end.</p>
                 <a href="https://sopeya.github.io/WS02-MID1/" class="btn btn-outline-dark">Learn More!</a>
               <p></p>
            </div>
