--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                         <a href="portfolio.html" class="nav-link">Porfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="contact.html" class="nav-link active">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -62,7 +62,7 @@
                                 <input type="text" name="email" class="form-control" id="email">
                             </div>
                             <div class="col-12">
-                                <label for="comments" class="form-label">comments</label>
+                                <label for="comments" class="form-label">Comments</label>
                                 <textarea name="comments" class="form-control" id="comments" rows="3"></textarea>
                             </div>
                             <div class="col-12 mb-1">
