--- a/portfolio.html
+++ b/portfolio.html
@@ -39,14 +39,14 @@
 </header>
 <main>
     <div class="container my-2 py-md-4">
-        <h1>My Portfolio</h1>
+        <h1>My Websites</h1>
         <div class="row et-1 g-3">
             <div class="col-12 col-and-6 col-lg-4">
         <div class="card">
             <img src="comrades.jpeg" alt="Kim Dokja and his companions" class="card-img-top">
             <div class="card-body">
                 <h5 class="card-title">Kim Dokja</h5>
-                <p class="card-text">The main protagonist of ORV. The sole reader of the webnovel Three Ways to Survive in a Ruined World, an apocalyptic fantasy story written by tls123 who read it through the end.</p>
+                <p class="card-text">The sole reader of the webnovel Three Ways to Survive in a Ruined World, a story written by tls123 who read it through the end.</p>
                 <a href="https://sopeya.github.io/WS02-MID1/" class="btn btn-outline-dark">Learn More!</a>
               <p></p>
            </div>
