--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav> 
     </div> 
 <main>
-  <header style="background-image: url('index-image.jpeg')">
+  <header style="background-image: url('production_id_4939677 (2160p).mp4')">
     <div class="color-overlay d-flex justify-content-center align-items-center">
       <h1>Interior Design and Decorating</h1>
       </div>
