--- a/index.html
+++ b/index.html
@@ -33,17 +33,15 @@
         </nav> 
     </div> 
 <main>
-  <header style="background-image: url('production_id_4939677 (2160p).mp4')">
+  <header style="background-image: url('pexels-anita-nararidh-5387206 (2160p).mp4')">
     <div class="color-overlay d-flex justify-content-center align-items-center">
-      <h1>Interior Design and Decorating</h1>
+      <h1>Web Designer</h1>
       </div>
      </header>
      <div class="singleCol mx-auto my5">
          <div class="container">
-             <h2 class="text-center">I'll make your room look amazing</h2>
-              <p class="lead">lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid</p>
-              <p>lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid</p>
-              <p>lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidid</p>
+             <h2 class="text-center">Let's make a great website together!</h2>
+              <p class="lead">"A good day to you! I'm Sophia Dela Cruz, an aspiring IT student who's still on her journey in learning how to design a website. Despite the numerous challenges and obstacles that I will encounter along the way, I will remains steadfast and determined in pursuing to learn this skill.  </p>
         </div>
     </div>
 </main>
