--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      <div class="singleCol mx-auto my5">
          <div class="container">
              <h2 class="text-center">Let's make a great website together!</h2>
-              <p class="lead">"A good day to you! I'm Sophia Dela Cruz, an aspiring IT student who's still on her journey in developing her website design skills.. Despite the numerous challenges and obstacles that I will encounter along the way, I will remains steadfast and determined in pursuing to learn this skill.  </p>
+              <p class="lead">"A good day to you! I'm Sophia Dela Cruz, an aspiring IT student who's still on her journey in developing her website design skills. Despite the numerous challenges and obstacles that I will encounter along the way, I will remains steadfast and determined in pursuing to learn this skill.  </p>
         </div>
     </div>
 </main>
