--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
-                        <img src="logo.PNG" width="220" height="85" alt="logo for Sophia">
+                        <img src="logo.svg" width="220" height="85" alt="logo for Sophia">
                         <span class="d-none">Sophia</span> </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navigation">
                         <span class="navbar-toggler-icon"></span>
